[package]
name = "miner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "miner"
path = "src/miner.rs"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
rand = "0.8.5"
rand_distr = "0.5.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.8"